<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowgli_nav2_plugins</name>
  <version>0.1.0</version>
  <description>
    Nav2 controller plugin implementing the Follow-The-Carrot (FTC) algorithm
    with decoupled PID for outdoor mowing robots.
    Ported from ftc_local_planner (mbf_costmap_core / ROS1) to nav2_core (ROS2).
  </description>
  <maintainer email="cedric@mowgli.dev">Cedric</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/ftc_controller_plugin.xml"/>
    <nav2_core plugin="${prefix}/goal_checker_plugin.xml"/>
  </export>
</package>
