<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowgli_simulation</name>
  <version>0.1.0</version>
  <description>
    Webots simulation package for the Mowgli autonomous robot mower.
    Provides Webots worlds, URDF for ros2_control, controller configs, and
    ROS2 launch files for running the simulation stack.
  </description>
  <maintainer email="cedric@example.com">Cedric</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- ament_cmake_python is needed to install the `mowgli_simulation`
       Python package (kinematic drive plugin loaded by
       webots_ros2_driver). Phase 2.2 of the Webots migration. -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ node dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mowgli_interfaces</depend>

  <!-- Python plugin runtime deps (mowgli_simulation.kinematic_drive) -->
  <exec_depend>rclpy</exec_depend>

  <!-- Webots integration -->
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- ROS2 core launch infrastructure -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Robot description and state publishing -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Visualisation -->
  <exec_depend>rviz2</exec_depend>

  <!-- Mowgli packages -->
  <exec_depend>mowgli_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
